[package]
name = "rust-server-hook"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6.0"
http-body-util = "0.1.2"
hyper = { version = "1.4.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.6", features = ["server", "http1", "tokio"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
